@@ -69,7 +69,7 @@
          "web" : "https://github.com/renatocron/Yaadgom"
       }
    },
-   "version" : "0.01",
+   "version" : "0.02",
    "x_contributors" : [
       "RenatoCRON <renato.cron@gmail.com>"
    ]
